--- a/user.properties.sample
+++ b/user.properties.sample
@@ -3,8 +3,13 @@
 #
 # Modify this file to taste and save as user.properties
 #
-# $Id: user.properties.sample,v 1.1 2003/05/18 11:56:21 tim Exp $
+# $Id: user.properties.sample,v 1.2 2003/05/18 18:10:02 tim Exp $
 # ---------------------------------------------------------------------------
 
+
 # ----- Restrict to test cases matching this pattern -----
-#testcase = Executors
+#testcase = PriorityQueue
+
+
+# ----- Show build warnings (-warnunchecked) -----
+#build.warnings = true
