--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@
 
 //  Author:  Russel Winder <russel@russel.org.uk>
 
-isSnapshot = false
+isSnapshot = true
 
 allprojects {
   group = 'org.codehaus.jsr166-mirror'
