--- a/build.gradle
+++ b/build.gradle
@@ -235,5 +235,5 @@ task clobber ( description : 'Clean all the Gradle subproject directories since 
 }
 
 task wrapper ( type : Wrapper ) {
-    gradleVersion = '1.0-milestone-4'
+    gradleVersion = '1.0-milestone-5-20110920085801+0200'
 }
