--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Mon Aug 01 15:22:43 BST 2011
+#Tue Sep 20 13:26:44 BST 2011
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=http\://repo.gradle.org/gradle/distributions/gradle-1.0-milestone-4-bin.zip
+distributionUrl=http\://repo.gradle.org/gradle/distributions-snapshots/gradle-1.0-milestone-5-20110920085801+0200-bin.zip
