--- a/build.gradle
+++ b/build.gradle
@@ -246,5 +246,5 @@ task clobber ( description : 'Clean all the Gradle subproject directories since 
 }
 
 task wrapper ( type : Wrapper ) {
-    gradleVersion = '1.0-milestone-5-20111017045626+0200'
+    gradleVersion = '1.0-milestone-6'
 }
