--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@
 
 //  A Gradle build for the JSR 166 artefacts.  This build replaces the Ant build.
 //
-//  Copyright © 2011 Russel Winder
+//  Copyright © 2011–2012 Russel Winder
 
 //  Author:  Russel Winder <russel@russel.org.uk>
 
@@ -246,5 +246,5 @@ task clobber ( description : 'Clean all the Gradle subproject directories since 
 }
 
 task wrapper ( type : Wrapper ) {
-    gradleVersion = '1.0-milestone-7'
+    gradleVersion = '1.0-milestone-8'
 }
