--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Fri Feb 17 09:06:09 GMT 2012
+#Wed Feb 22 06:28:19 GMT 2012
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=http\://services.gradle.org/distributions/gradle-1.0-milestone-8-bin.zip
+distributionUrl=http\://services.gradle.org/distributions/gradle-1.0-milestone-8a-bin.zip
